fixed div wrapping

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,21 @@
 html{
-	position: static;
+
+	overflow-x: hidden;
+}
+
+* {
+  -moz-box-sizing: border-box; /* Firexfox */
+  -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
+  box-sizing: border-box; /* IE */
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
 
 #adBanner {
@@ -15,6 +31,10 @@ html{
 
 h1{
 	text-align: center;
+}
+
+div {
+	display: inline-block;
 }
 
 #profile {
@@ -49,6 +69,10 @@ h1{
 
 .content div{
 	display: inline-block;
+}
+
+.content {
+	width: 1085px;
 }
 
 #headshot {
@@ -90,9 +114,10 @@ body {
 	border-color: black;
 	border-style: solid;
 	float: right;
-	margin-right: 15px;
+	margin-left: 15px;
 	margin-top: 100px;
 	overflow: scroll;
+/*	position: fixed;*/
 }
 
 h2 {
@@ -108,8 +133,6 @@ h2 {
 li{
 	color: black;
 	list-style-type: none;
-
-
 }
 
 article {
